Media queries: md devices, fixed paddings on mobile.

--- a/public/styles.css
+++ b/public/styles.css
@@ -553,6 +553,16 @@ video {
   margin-bottom: 1rem;
 }
 
+.mx-4{
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.mx-8{
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
 .mt-16{
   margin-top: 4rem;
 }
@@ -706,24 +716,17 @@ video {
   padding-bottom: 2rem;
 }
 
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .pb-8{
   padding-bottom: 2rem;
 }
 
-.pl-4{
-  padding-left: 1rem;
-}
-
-.pl-6{
-  padding-left: 1.5rem;
-}
-
 .pr-4{
   padding-right: 1rem;
-}
-
-.pr-8{
-  padding-right: 2rem;
 }
 
 .pt-10{
@@ -732,10 +735,6 @@ video {
 
 .pt-8{
   padding-top: 2rem;
-}
-
-.pl-8{
-  padding-left: 2rem;
 }
 
 .text-center{
@@ -764,7 +763,7 @@ video {
   line-height: 2.25rem;
 }
 
-.text-top{
+.text-top-sm{
   font-size: 32px;
 }
 
@@ -831,4 +830,79 @@ video {
 .hover\:bg-orange-main:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(249 194 46 / var(--tw-bg-opacity));
+}
+
+@media (min-width: 768px){
+  .md\:m-0{
+    margin: 0px;
+  }
+
+  .md\:mx-0{
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .md\:mx-32{
+    margin-left: 8rem;
+    margin-right: 8rem;
+  }
+
+  .md\:mt-32{
+    margin-top: 8rem;
+  }
+
+  .md\:mt-24{
+    margin-top: 6rem;
+  }
+
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:py-4{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .md\:py-2{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .md\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .md\:py-12{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
+  .md\:px-12{
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .md\:px-32{
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+
+  .md\:text-section-md{
+    font-size: 36px;
+  }
+
+  .md\:text-top-md{
+    font-size: 48px;
+  }
+
+  .md\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-top-sm{
+    font-size: 32px;
+  }
 }
